[package]
name = "zoneinfo_compiled"
description = "Library for parsing compiled zoneinfo files"

authors = ["Ben S <ogham@bsago.me>"]
documentation = "https://docs.rs/zoneinfo_compiled/"
homepage = "https://github.com/rust-datetime/zoneinfo-compiled/"
license = "MIT"
version = "0.4.8"

[lib]
name = "zoneinfo_compiled"

[dependencies]
byteorder = "1"
datetime = "0.4.7"


