[package]
name = "zoneinfo_compiled"
description = "Library for parsing compiled zoneinfo files"

authors = ["Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/zoneinfo_compiled/"
exclude = ["/README.md", "/LICENCE", "/.rustfmt.toml", "/.travis.yml"]
license = "MIT"
repository = "https://github.com/rust-datetime/zoneinfo-compiled/"
readme = "README.md"
version = "0.4.8"

[lib]
name = "zoneinfo_compiled"

[dependencies]
byteorder = "1.0"
datetime = "0.4"
